# token-tracker-bot

./: .env.example  .gitignore  .python-version  .venv  LICENSE  README.md  context7.json  dashboardApp.py  pyproject.toml  requirements.txt  tx_storage.db
notes-token-tracker-bot/: ROADMAP.md  Webhooks VS Polling Telegram Bot.md
notes-token-tracker-bot/.obsidian/: workspace.json
notes-token-tracker-bot/Tech-Stack/: aiohttp.md
notes-token-tracker-bot/assets/: APIs_Blockchain.md
src/: services.py  testMoralis.py
src/bot/: handlers.py  main.py
src/config/: logger_config.py  settings.py
src/models/: __init__.py
src/utils/: decorators.py  format.py
src/watcher/: moralis.py  storage.py
static/dashboard/: index.html  script.js  style.css
tests/: testPersistence.py  testSettings.py  testWatcher.py
